syntax = "proto3"; 
package pb; 
option go_package = "github.com/child6yo/rago/services/pkg/pb";

message Metadata {
    string url = 1;
}

message Document {
    string content = 1;
    Metadata metadata = 2;
}

message DocumentArray {
    repeated Document doc = 1;
}

message Empty {
}

service SplitterService {
    rpc HandleDocuments (DocumentArray) returns (Empty);
}